<resources>
    <string name="app_name">Đồ án nhóm 21</string>
    <string name="congtrinh">Công trình</string>
    <string name="vattu">Vật tư</string>
    <string name="phieu">Phiếu</string>
    <string name="all">See shipping slip</string>
    <string name="tiengviet">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>
    <string name="diachict">"Địa Chỉ : "</string>
    <string name="them">Thêm</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="clear">Clear</string>
    <string name="back">Quay lại</string>
    <string name="mavt">"Mã vật tư : "</string>
    <string name="tenvt">"Tên vật tư : "</string>
    <string name="dvtinh">"Đơn vị tính : "</string>
    <string name="giavc">"Giá vận chuyển : "</string>
    <string name="maphieu">"Mã phiếu : "</string>
    <string name="ngay">"Ngày : "</string>
    <string name="chitietphieu">Chi tiết phiếu</string>
    <string name="soluong">"Số lượng : "</string>
    <string name="culy">"Cự ly : "</string>
    <string name="exit">Thoát</string>
    <string name="mact">"Mã công trình : "</string>
    <string name="tenct">"Tên công trình : "</string>
    <string name="timkiemctp">Nhập mã chi tiết phiếu</string>
    <string name="timkiemct">Nhập mã công trình</string>
    <string name="timkiemphieu">Nhập mã phiếu</string>
    <string name="timkiemvt">Nhập mã vật tư</string>
    <string name="chucnang">Chức năng</string>
    <string name="thongtin">Thông tin</string>
    <string name="sophieu">Số Phiếu : </string>
    <string name="nhapsophieu">Nhập số phiếu</string>
    <string name="nhapsoluong">Nhập số lượng</string>
    <string name="nhapculy">Nhập cự Ly</string>
    <string name="nhapmact">Nhập mã công trình</string>
    <string name="nhaptenct">Nhập tên công trình</string>
    <string name="nhapmaphieu">Nhập mã phiếu</string>
    <string name="nhapngay">Nhập ngày</string>
    <string name="themdiachi">Thêm địa chỉ\\</string>
    <string name="nhapmavt">Nhập mã vật tư</string>
    <string name="nhaptenvt">Nhập tên vật tư</string>
    <string name="nhapdvtinh">Nhập đơn vị tính</string>
    <string name="nhapgiavc">Nhập giá vận chuyển</string>
    <string name="ngonngu">Ngôn Ngữ</string>
</resources>
